feat: add fmxl file for register and createing post. Setup driver for mtysql database